# Real-state-intelligence

./: .env-example  README.md  new.txt  pyproject.toml
config/: config.yaml  faqs.yaml  models.yaml
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
notebooks/: 01_crawl_primelands.ipynb  02_chunk_and_embed.ipynb  03_chat_with_demo.ipynb  04_performance_arena.ipynb  chunking.ipynb  crawler_primelands.ipynb  rag.ipynb
notebooks/src/: config.py
src/real_state/: __init__.py  config.py
src/real_state/api/: server.py
src/real_state/application/chat_service/: __init__.py  cag_cache.py  cag_service.py  crag_service.py  rag_service.py
src/real_state/application/domain/: _init_.py  models.py  utils.py
src/real_state/application/domain/prompts/: rag_template.py
src/real_state/application/ingest_document_service/: __init__.py  chunkers.py  web_crawler.py
src/real_state/infrastructure/db/: __init__.py  vector_db.py
src/real_state/infrastructure/llm_provider/: __init__.py  embeddings.py  llm_service.py
