[project]
name = "real-state"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.0",
    "tiktoken>=0.12.0",
]
